[gd_scene load_steps=5 format=2]

[ext_resource path="res://Cuestionario.gd" type="Script" id=1]
[ext_resource path="res://imagenes-preguntas/imagen1.png" type="Texture" id=2]
[ext_resource path="res://Menus/Boton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Custionarios/Pregunta.tscn" type="PackedScene" id=4]

[node name="Cuestionario" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
pregunta = ExtResource( 4 )
imagen_ui_path = NodePath("VBoxContainer/Imagen")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 20.0
margin_right = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 440.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )

[node name="Imagen" type="TextureRect" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 440.0
margin_bottom = 254.0
rect_min_size = Vector2( 200, 200 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 258.0
margin_right = 440.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "PREGUNTA Nueva"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VScrollBar" type="VScrollBar" parent="."]
anchor_left = 0.1
anchor_top = 0.5
anchor_right = 0.9
anchor_bottom = 0.95
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="VScrollBar"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rect_clip_content = true
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="VScrollBar/VBoxContainer2"]
rect_clip_content = true

[node name="Button" parent="VScrollBar/VBoxContainer2/Control" instance=ExtResource( 3 )]
margin_top = -324.0
margin_right = 384.0
margin_bottom = -274.0
rect_min_size = Vector2( 0, 50 )

[node name="Button2" parent="VScrollBar/VBoxContainer2/Control" instance=ExtResource( 3 )]
margin_top = -270.0
margin_right = 384.0
margin_bottom = -220.0
rect_min_size = Vector2( 0, 50 )

[node name="Button3" parent="VScrollBar/VBoxContainer2/Control" instance=ExtResource( 3 )]
margin_top = -216.0
margin_right = 384.0
margin_bottom = -166.0
rect_min_size = Vector2( 0, 50 )

[node name="Button4" parent="VScrollBar/VBoxContainer2/Control" instance=ExtResource( 3 )]
margin_top = -162.0
margin_right = 384.0
margin_bottom = -112.0
rect_min_size = Vector2( 0, 50 )

[node name="Button5" parent="VScrollBar/VBoxContainer2/Control" instance=ExtResource( 3 )]
margin_top = -108.0
margin_right = 384.0
margin_bottom = -58.0
rect_min_size = Vector2( 0, 50 )

[node name="Button6" parent="VScrollBar/VBoxContainer2/Control" instance=ExtResource( 3 )]
margin_top = -54.0
margin_right = 384.0
margin_bottom = -4.0
rect_min_size = Vector2( 0, 50 )
[connection signal="pressed" from="VScrollBar/VBoxContainer2/Control/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VScrollBar/VBoxContainer2/Control/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VScrollBar/VBoxContainer2/Control/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="VScrollBar/VBoxContainer2/Control/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="VScrollBar/VBoxContainer2/Control/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="VScrollBar/VBoxContainer2/Control/Button6" to="." method="_on_Button6_pressed"]
